2003-10-14  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-labelled.c, cong-editor-area-labelled.h, Makefile.am, plugin-lists-area-listitem.c, plugin-lists-area-listitem.h

	Refactored CongEditorAreaListitem into a new CongEditorAreaLabelled class
	
	* plugin-lists-node-element-listitem.c, plugin-lists-node-element-listitem.h

	Fix for bug #122365 (updates for labels in listitem plugin)
	
	* cong-parser-error.c, cong-parser-error.h

	Support for parsing from a libxml2 URI

	* cong-editor-node-text.c, cong-file-properties.c, cong-primary-window.c, cursor.c, plugin-cleanup-source.c, popup.c

	Fixed some warnings and removed dead code

2003-10-13  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-node.c

	Added assertions to trap missing method handling implementations

	* cong-dispspec-registry.c, cong-document.c, cong-error-dialog.h, cong-error-file-open.c, cong-error-file-save.c, cong-error-tests.c, cong-file-open.c, cong-parser-error.c, cong-parser-error.h, cong-plugin.c, cong-plugin.h, cong-vfs.c, cong-vfs.h, plugin-convert-case.c

	Removed lots of GnomeVFS URI objects; replaced with stringified URIs

2003-10-11  Geert Stappers <stappers@stappers.nl>

	* Makefile.am, cong-app.c, cong-file-import.c, cong-menus.c
	and plugin-docbook.
	Use pkgdatadir instead of datadir.

2003-10-10  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-widget3.c, cong-node.c

	Fixes for bug #124011 (entity ref children)

2003-10-09  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-app.c, cong-document.c, xmledit.c

	Use the X CLIPBOARD for clipboard handling, rather than an internal buffer

2003-10-08  David Malcolm <david@davemalcolm.demon.co.uk>
